--- a/.github/workflows/push_create-package1.yml
+++ b/.github/workflows/push_create-package1.yml
@@ -13,3 +13,15 @@ jobs:
     permissions:
       contents: write
     secrets: inherit
+
+  install-in-uat:
+    name: Install in UAT
+    needs: [create-package]
+    uses: navikt/crm-workflows-base/.github/workflows/deployPackage.yml@master
+    permissions:
+      contents: read
+    with:
+      packageId: ${{ needs.create-package.outputs.packageId }}
+      org: uat
+      unpackagable: ./force-app/unpackagable-with-auto-deploy
+    secrets: inherit
